Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -30,7 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "import pandas as pd\n",
+    "df=pd.re"
    ]
   },
   {
