--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
     "#Your code here\n",
     "import pandas as pd\n",
     "df=pd.read_csv('Data/Zipcode_Demos.csv')\n",
-    "df.head()"
+    "df.head()\n"
    ]
   },
   {
