Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1959,7 +1959,8 @@
     "import pandas as pd\n",
     "df=pd.read_csv('Data/Zipcode_Demos.csv')\n",
     "df.head()\n",
-    "df.drop(0)"
+    "df.drop(0)\n",
+    "real="
    ]
   },
   {
