Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1960,7 +1960,7 @@
     "df=pd.read_csv('Data/Zipcode_Demos.csv')\n",
     "df.head()\n",
     "df.drop(0)\n",
-    "real="
+    "real=df[[]]"
    ]
   },
   {
