--- a/index.ipynb
+++ b/index.ipynb
@@ -498,12 +498,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-12-748e5bc3d8ec>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-748e5bc3d8ec>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    except Exception as e:\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "#Hint: here's a useful programming pattern to use.\n",
-    "\n",
+    "df=pd.read_csv('Data/Yelp_Reviews_corrupt.csv')\n",
     "try:\n",
     "    #do something\n",
     "except Exception as e:\n",
